syntax = "proto3";
package proto;

service DMineService{
    // request proof
    rpc GenProof (ProofReq) returns (ProofRes){}
    rpc GetMetaData (GetMetaReq) returns (GetMetaRes){}
    rpc ReadPiece (ReadPieceReq) returns (ReadPieceRes){}
}

message ProofReq{
    string Title = 1;
    repeated AddpieceReq AddPieceReq = 2;
    repeated AddpieceRes AddPieceRes = 3;
    repeated PostReq PostReq = 4;
    repeated PostRes PostRes = 5;
}
message ProofRes{

}
message AddpieceReq{

}
message AddpieceRes{

}
message PostReq{

}
message PostRes{

}

message GetMetaReq{

}
message GetMetaRes{

}

message ReadPieceReq{

}
message ReadPieceRes{

}